Fix scrollbar and dashed line in pagination component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,7 @@
 * {
 	box-sizing: border-box;
 }
+
+@utility no-scrollbar {
+	@apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+}
